themes/skeleton/static/css/style.css
/* self-host instead of using Adobe Fonts or Google Fonts, otherwise @font-face won't work */
@font-face {
  font-family: "Fullwidth quotes";
  /* ditch linux because not important */
  src: url('/fonts/SourceHanSansSC-Regular.woff2') format('woff2');
  unicode-range: U+2018-2019, U+201C-201D;
}

@font-face {
  font-family: "Source Han Sans SC";
  src: url('/fonts/SourceHanSansSC-Regular.woff2') format('woff2');
}

.text-figures {
  font-variant-numeric: oldstyle-nums proportional-nums;
}

/* beware of mechanically scaled small caps */
.small-caps {
  font-variant-caps: all-small-caps;
  letter-spacing: .02em;
}

.all-caps {
  text-transform: uppercase;
  letter-spacing: .04em;
}

body {
  margin: 0;
  padding: 0;
  line-height: 1.5;
  /* manual font stack, somehow not compatible with iOS */
  /* font-family: 'Fullwidth quotes', 'SF Pro', 'Segoe UI', 'PingFang SC', 'Microsoft Yahei', sans-serif; */
  font-family: 'Fullwidth quotes', 'ff-scala-sans-pro', 'Source Han Sans SC', system-ui;
  font-variant-numeric: lining-nums;
  font-weight: 400;
  font-size: 20px;
}

header{
  width: 600px;
  min-width: 45%;
  max-width: 80%;
  margin: auto;
  padding-top: 20px;
}
.title-wrapper{
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.header-divider{
  height:1px;
  border:none;
  background:black;
  margin-top: 10px;
  margin-bottom: 30px;
}
.header-title{
  font-family: 'ff-scala-sans-pro', system-ui;
  color: black;
}
.header-title:hover{
  text-decoration: none;
}
.header-link{
  float: right;
  color: black;
}
.header-link:hover{
  text-decoration: none;
}

main{
  width: 600px;
  min-width: 45%;
  max-width: 80%;
  margin: auto;
  padding-bottom: 20px;
}

